2009-03-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: "freeware" replaced with "free open source"

2009-03-12 Borut Razem <borut.razem AT siol.net>

	* src/z80/peep.c: #2652979: --debug crashes sdcc

2009-03-12 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCglue.c,
	  support/regression/tests/bug2655200.c:
	  applied modified patch from Robert Larice <larice AT vidisys.de>
	  fixing original report of bug #2655200: pointer to pdata memory
	  not correctly initialized

2009-03-11 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c: retain the original file mode

2009-03-10 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/z80/gen.c, src/hc08/gen.c, src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  fixed bug #1875933: Evelyn jumps into the void
	  thanks to Robert Larice

2009-03-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (LinkFlow): fix invalid cast from pCodeLabel
	  to pCodeInstruction to avoid a segmentation fault

2009-03-03 Borut Razem <borut.razem AT siol.net>

	* device/lib/printf_large.c: fixed bug #2656821: bug in printf

2009-03-03 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/Makefile.in: build device-specific
	  libraries for the correct processor, fixes #2654585

2009-03-01 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in: fixed parallel builds (i.e., make -jN, N>1)

2009-03-01 Borut Razem <borut.razem AT siol.net>

	* src/z80/peep.c: fixed bug #2648964: --i-code-in-asm crashes sdcc
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.9.0

2009-03-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (spillThis, spilSomething): fixed bug 2435941
	  (serialRegAssign): do not spil bit registers
	  throughout cosmetic changes
	* support/regression/tests/bug2435941.c: new, added

2009-02-28 Raphael Neider <rneider AT web.de>

	* src/regression/compare10.c,
	  src/regression/compare7.c,